<resources>
    <!-- General -->
    <string name="app_name">Me Adote</string>
    <string name="erro_conexao">Verifique sua conexão</string>

    <!-- Menu -->
    <string name="navigation_drawer_open" translatable="false">
        Open navigation drawer
    </string>
    <string name="navigation_drawer_close" translatable="false">
        Close navigation drawer
    </string>
    <string name="inserir_anuncio">Inserir Anúncio</string>
    <string name="chat">Chat</string>
    <string name="favoritos">Favoritos</string>
    <string name="notificacoes">Notificações</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="nos_ajude">Nos Ajude</string>
    <string name="avalie_google">Avalie na Google Play</string>
    <string name="filtro">Filtro</string>
    <string name="inicio">Início</string>

    <!-- Main -->
    <string name="entrar">ENTRAR</string>
    <string name="idade">Idade: </string>
    <string name="sexo">Sexo: </string>
    <string name="pesquisar">Pesquisar</string>

    <!-- Filtro -->
    <string name="filtros">Filtros</string>
    <string name="idade_filtro">Idade</string>
    <string name="sexo_filtro">Sexo</string>
    <string name="especie">Espécie</string>
    <string name="condicao">Condição</string>
    <string name="localizacao">Localização</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>

    <!-- Login -->
    <string name="criar_label">Crie sua conta como preferir</string>
    <string name="gmail">CONTINUAR COM GMAIL</string>
    <string name="email">CONTINUAR COM E-MAIL</string>
    <string name="tenho_conta">Já tenho uma conta</string>
    <string name="face">CONTINUAR COM FACEBOOK</string>
    <string name="email_label">E-mail</string>
    <string name="senha">Senha</string>
    <string name="erro_email">Preencha o e-mail</string>
    <string name="erro_senha">Preencha a senha</string>
    <string name="email_invalido">E-mail inválido</string>
    <string name="continuar">CONTINUAR</string>
    <string name="erro_login">Não foi possível validar, tente novamente mais tarde</string>

    <!-- Conta -->
    <string name="nova_conta">Nova Conta</string>
    <string name="confirma_conta">Confirmar Senha</string>
    <string name="nome">Nome Completo</string>
    <string name="cep">CEP</string>
    <string name="rua">Rua</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="salva">Salvar</string>
    <string name="adicionar_foto">Adicionar Foto</string>
    <string name="alterar_foto">Alterar Foto</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="cep_invalido">CEP inválido</string>
    <string name="senha_erro_confirma">As senhas não conferem</string>
    <string name="bairro">Bairro</string>
    <string name="cep_erro">CEP não encontrado</string>
    <string name="login_erro">Já existe uma conta com esse e-mail</string>
    <string name="erro_preenchimento">Preencha todos os campos obrigatórios</string>
    <string name="usuario_criado">Usuário criado com sucesso</string>
    <string name="conta">Conta</string>
    <string name="sair">Sair</string>
    <string name="saiu">Você saiu</string>
    <string name="entrou">Autenticação realizada com sucesso</string>
    <string name="editar_conta">Editar Conta</string>
    <string name="nova_senha">Nova Senha</string>
    <string name="confirma_nova_senha">Confirmar Nova Senha</string>
    <string name="cancelar">Cancelar</string>
    <string name="salva_altera">As alterações foram salvas</string>
    <string name="erro_altera">Não foi possível salvar as alterações, tente novamente mais tarde</string>

</resources>